crates/fossil-codegen/tests/snapshots/codegen_calls__str_length_builtin.snap
---
source: crates/fossil-codegen/tests/codegen_calls.rs
expression: sql_for(2)
---
CREATE VIEW users AS
SELECT * FROM read_csv_auto('examples/users.csv', sample_size=-1);
COPY (
    SELECT
        users.id AS subject,
        'https://example.org/value' AS predicate,
        length(users.raw) AS object
    FROM users
) TO 'output.parquet' (FORMAT PARQUET);
